--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         h1 {
             margin-top: 50px; 
-            margin-bottom: 100px; /* Increased margin for spacing */
+            margin-bottom: 100px;
         }
 
         .space-element {
@@ -36,8 +36,8 @@
             overflow: hidden; 
             background-color: #ffbb33;
             box-shadow: 0 0 20px #ffbb33;
-            margin-left: auto; /* Center horizontally */
-            margin-right: auto; /* Center horizontally */
+            margin-left: auto; 
+            margin-right: auto; 
         }
 
         .space-element:hover {
@@ -58,13 +58,13 @@
         }
 
         #fact-container {
-            width: 600px; /* Adjust width as needed */
+            width: 600px;
             background-color: #fff;
             color: #000; 
             padding: 20px;
             border: 3px solid #007bff; 
             border-radius: 10px; 
-            margin-bottom: 50px; /* Spacing between rectangle and button */ 
+            margin-bottom: 50px;
         }
 
         #fact-display {
@@ -72,8 +72,8 @@
             text-align: center; 
         }
 
-        /* Star Background - Increased number of stars */
-        body::before { 
+        /* Star Background */
+        body::before {
             content: '';
             display: block;
             position: fixed;
@@ -81,33 +81,26 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: -1; 
+            z-index: -1;
             background-image: 
                 radial-gradient(circle at 20% 30%, rgba(255, 255, 255, 0.8) 2px, transparent 2px),
                 radial-gradient(circle at 80% 90%, rgba(255, 255, 255, 0.5) 1px, transparent 1px),
                 radial-gradient(circle at 50% 10%, rgba(255, 182, 193, 0.3) 3px, transparent 3px), 
                 radial-gradient(circle at 10% 50%, rgba(255, 255, 255, 0.6) 1px, transparent 1px),
                 radial-gradient(circle at 90% 60%, rgba(255, 182, 193, 0.2) 2px, transparent 2px),
-                radial-gradient(circle at 5% 70%, rgba(255, 255, 255, 0.7) 2px, transparent 2px), /* New star */
-                radial-gradient(circle at 95% 20%, rgba(255, 255, 255, 0.4) 1px, transparent 1px),
-                radial-gradient(circle at 20% 30%, rgba(255, 255, 255, 0.8) 2px, transparent 2px),
-                radial-gradient(circle at 80% 90%, rgba(255, 255, 255, 0.5) 1px, transparent 1px),
-                radial-gradient(circle at 50% 10%, rgba(255, 182, 193, 0.3) 3px, transparent 3px), 
-                radial-gradient(circle at 10% 50%, rgba(255, 255, 255, 0.6) 1px, transparent 1px),
-                radial-gradient(circle at 90% 60%, rgba(255, 182, 193, 0.2) 2px, transparent 2px),
-                radial-gradient(circle at 5% 70%, rgba(255, 255, 255, 0.7) 2px, transparent 2px), /* New star */
-                radial-gradient(circle at 95% 20%, rgba(255, 255, 255, 0.4) 1px, transparent 1px), 
-                radial-gradient(circle at 20% 30%, rgba(255, 255, 255, 0.8) 2px, transparent 2px),
-                radial-gradient(circle at 80% 90%, rgba(255, 255, 255, 0.5) 1px, transparent 1px),
-                radial-gradient(circle at 50% 10%, rgba(255, 182, 193, 0.3) 3px, transparent 3px), 
-                radial-gradient(circle at 10% 50%, rgba(255, 255, 255, 0.6) 1px, transparent 1px),
-                radial-gradient(circle at 90% 60%, rgba(255, 182, 193, 0.2) 2px, transparent 2px),
-                radial-gradient(circle at 5% 70%, rgba(255, 255, 255, 0.7) 2px, transparent 2px), /* New star */
-                radial-gradient(circle at 95% 20%, rgba(255, 255, 255, 0.4) 1px, transparent 1px),  /* New star */
                 /* ... Add more radial-gradient for more stars as needed ... */
+                radial-gradient(circle at 5% 15%, rgba(255, 255, 255, 0.7) 2px, transparent 2px),
+                radial-gradient(circle at 85% 25%, rgba(255, 255, 255, 0.4) 1px, transparent 1px),
+                radial-gradient(circle at 60% 80%, rgba(255, 255, 255, 0.9) 3px, transparent 3px),
+                radial-gradient(circle at 35% 95%, rgba(255, 255, 255, 0.6) 2px, transparent 2px),
+                radial-gradient(circle at 75% 5%, rgba(255, 255, 255, 0.8) 2px, transparent 2px),
+                radial-gradient(circle at 20% 60%, rgba(255, 255, 255, 0.5) 1px, transparent 1px),
+                radial-gradient(circle at 90% 40%, rgba(255, 255, 255, 0.3) 3px, transparent 3px),
+                radial-gradient(circle at 5% 45%, rgba(255, 255, 255, 0.6) 1px, transparent 1px),
+                radial-gradient(circle at 95% 70%, rgba(255, 255, 255, 0.2) 2px, transparent 2px);
         }
 
-        /* Blinking Star Animation - Add this to your CSS */
+        /* Blinking Star Animation */
         @keyframes blink {
             0%, 100% { opacity: 1; }
             50% { opacity: 0.2; } 
@@ -115,16 +108,6 @@
 
         .blinking-star {
             animation: blink 1.5s infinite; /* Adjust duration (1.5s) as needed */
-        }
-
-        /* Apply blinking animation to some stars */
-        body::before {
-            /* ... your existing star styles ... */
-            background-image: 
-                /* ... your existing radial gradients ... */
-                radial-gradient(circle at 60% 40%, rgba(255, 255, 255, 0.8) 3px, transparent 3px) blinking-star, /* Blinking star */
-                radial-gradient(circle at 25% 85%, rgba(255, 255, 255, 0.6) 2px, transparent 2px) blinking-star; /* Blinking star */
-                /* ... Add blinking-star to more radial gradients as needed... */
         }
     </style>
 </head>
@@ -169,5 +152,6 @@
     </script>
 </body>
 </html>
+
 
 
