--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                 radial-gradient(circle at 50% 10%, rgba(255, 182, 193, 0.3) 3px, transparent 3px), 
                 radial-gradient(circle at 10% 50%, rgba(255, 255, 255, 0.6) 1px, transparent 1px),
                 radial-gradient(circle at 90% 60%, rgba(255, 182, 193, 0.2) 2px, transparent 2px),
-                /* ... Add more radial-gradient for more stars as needed ... */
                 radial-gradient(circle at 5% 15%, rgba(255, 255, 255, 0.7) 2px, transparent 2px),
                 radial-gradient(circle at 85% 25%, rgba(255, 255, 255, 0.4) 1px, transparent 1px),
                 radial-gradient(circle at 60% 80%, rgba(255, 255, 255, 0.9) 3px, transparent 3px),
@@ -99,8 +98,6 @@
                 radial-gradient(circle at 5% 45%, rgba(255, 255, 255, 0.6) 1px, transparent 1px),
                 radial-gradient(circle at 95% 70%, rgba(255, 255, 255, 0.2) 2px, transparent 2px);
         }
-
-        /* Blinking Star Animation */
         @keyframes blink {
             0%, 100% { opacity: 1; }
             50% { opacity: 0.2; } 
@@ -113,7 +110,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Explore the Cosmos!</h1>
+        <h1>Explore the Cosmos! With Me🫶🏼</h1>
 
         <div id="fact-container">
             <div id="fact-display"></div>
